--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/HafiefMAziz/node-app#readme",
   "dependencies": {
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "yargs": "^17.7.2"
   }
 }
