--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/HafiefMAziz/node-app#readme",
   "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "validator": "^13.9.0",
     "yargs": "^17.7.2"
   }
